<resources>
    <string name="app_name">E-Diary</string>
    <string name="add_event">Add Event</string>
    <string name="upload_images">Upload Images</string>
    <string name="event_details">Event Details</string>
    <string name="event">Events</string>
    <string name="date">Date</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">E-mail</string>
    <string name="already_a_user">Already a user?</string>
    <string name="logout">Logout</string>
    <string name="title_activity_test">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="event_image_content_des">Event Image</string>

</resources>
